Hide app border on smaller devices. Logout bug fix.

--- a/ui/src/app/app.component.scss
+++ b/ui/src/app/app.component.scss
@@ -10,4 +10,8 @@
   border: 2px solid #222;
   position: relative;
   border-radius: 15px;
+
+  @media screen and (max-height: 750px) {
+    border: none;
+  }
 }
